--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
+    "live-server": "^1.2.2",
     "style-loader": "^3.3.3",
     "typescript": "^5.3.2",
     "webpack": "^5.88.2",
